-----------------------------------------------------------------------
Perfect Error Documents - CHANGELOG

-----------------------------------------------------------------------
PED v.1.7.5 - 2017-11-22 James Anderson Jr. <james@jamesandersonjr.com>
-----------------------------------------------------------------------

- Changed "schema.org" type from 'Action', to 'InformAction'
- Organized CSS into 'similar-rule' groups
- Added concise HTML/PHP comments, to better define back-end markup
- Updated back-end "royalty attribution" statement
- Updated version number to PED 1.7.5
* Enjoy ;-)

-----------------------------------------------------------------------
PED v.1.7.4 - 2017-06-27 James Anderson Jr. <james@jamesandersonjr.com>
-----------------------------------------------------------------------

- Added "og:image:url" for redundancy
- Added "og:image:width"
- Added "og:image:height"
- Added "og:image:type"

-----------------------------------------------------------------------
PED v.1.7.3 - 2017-06-17 James Anderson Jr. <james@jamesandersonjr.com>
-----------------------------------------------------------------------

- Added itemprop="url" property to Google "Structured-Data" tags
- Added "og:image:secure_url" for SSL/TLS/HTTPS secure domains

-----------------------------------------------------------------------
PED v.1.7.2 - 2017-06-08 James Anderson Jr. <james@jamesandersonjr.com>
-----------------------------------------------------------------------

- Removed unnecessary image files (replaced with script-embedded Base64)
- Added new keywords
- Added new 'Open Graph' tags
- Added new configuration settings
- Fixed grammatical errors, in comments
- Using internal CSS, instead of external CSS, to reduce external requirements
- Switched royalty links in license, and back-end of script, to SSL/TLS/HTTPS versions
- Included changelog into GitHub project

-----------------------------------------------------------------------